add all elements required except <a>

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -6,5 +6,19 @@
   </head>
   <body>
     <h1>Step forward! Don't quit!</h1>
+    <p>My <strong>goal</strong> is to become a web developer and complete and Ironman.</p>
+    <h3>Steps to become a <em>developer</em></h3>
+    <ol>
+      <li>Enroll in a bootcamp</li>
+      <li>Complete online tutorials</li>
+      <li>Ask questions</li>
+      <li>Practice! Practice! Practice!</li>
+    </ol>
+    <h3>Steps to become an <em>Ironman</em></h3>
+    <ul>
+      <li>Start running consistently</li>
+      <li>Join a masters swim class</li>
+      <li>Eat a balanced diet</li>
+    </ul>
   </body>
 </html>
