add link to ul header

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -14,7 +14,7 @@
       <li>Ask questions</li>
       <li>Practice! Practice! Practice!</li>
     </ol>
-    <h3>Steps to become an <em>Ironman</em></h3>
+    <h3>Steps to become an <a href="http://www.ironman.com">Ironman</a></h3>
     <ul>
       <li>Start running consistently</li>
       <li>Join a masters swim class</li>
