add title to website

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Goal Setting</title>
   </head>
   <body>
     <h1>Step forward! Don't quit!</h1>
