add additional table using colspan and rowspan

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -22,5 +22,26 @@
         <td>41</td>
       </tr>
     </table>
+
+    <table border="1">
+      <tr>
+        <th>Team</th>
+        <th>Sport</th>
+        <th>City</th>
+      </tr>
+      <tr>
+        <td colspan="2">Manchester United Football Club</td>
+        <td>Manchester</td>
+      </tr>
+      <tr>
+        <td>Bayern Munich</td>
+        <td rowspan="2">Soccer</td>
+        <td>Munich</td>
+      </tr>
+      <tr>
+        <td>Real Madrid</td>
+        <td>Madrid</td>
+      </tr>
+    </table>
   </body>
 </html>
