Add classes to img tags and css for .octopus

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="octopus.css" type="text/css">
   </head>
   <body>
-    <img src="octopus.png" alt="picture of an octopus">
-    <img src="hat.png" alt="a cowboy hat">
-    <img src="glasses.png" alt="heart shaped glasses">
+    <img class="octopus" src="octopus.png" alt="picture of an octopus">
+    <img class="hat" src="hat.png" alt="a cowboy hat">
+    <img class="glasses" src="glasses.png" alt="heart shaped glasses">
   </body>
 </html>
