--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+n<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="octopus.css" type="text/css">
   </head>
   <body>
-    <img class="octopus" src="octopus.png" alt="picture of an octopus">
-    <img class="hat" src="hat.png" alt="a cowboy hat">
-    <img class="glasses" src="glasses.png" alt="heart shaped glasses">
+    <div>
+      <img class="octopus" src="octopus.png" alt="picture of an octopus">
+      <img class="hat" src="hat.png" alt="a cowboy hat">
+      <img class="glasses" src="glasses.png" alt="heart shaped glasses">
+    </div>
   </body>
 </html>
