Tried new adjustments for positioning

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -1,4 +1,4 @@
-n<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,9 +8,9 @@ n<!DOCTYPE html>
   </head>
   <body>
     <div>
-      <img class="octopus" src="octopus.png" alt="picture of an octopus">
-      <img class="hat" src="hat.png" alt="a cowboy hat">
-      <img class="glasses" src="glasses.png" alt="heart shaped glasses">
+      <img id="octopus" src="octopus.png" alt="picture of an octopus">
+      <img id="hat" src="hat.png" alt="a cowboy hat">
+      <img id="glasses" src="glasses.png" alt="heart shaped glasses">
     </div>
   </body>
 </html>
