Add comment to denote pair partner in head

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- This was a GPS with Melanie Hahn-->
     <meta charset="utf-8">
     <title>GPS 1.2</title>
   </head>
