Add answers to Release 4 in comment at bottom of page

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -46,7 +46,7 @@
           <tr>
             <td rowspan="2">Span 2 rows</td>
             <td>Row 2 Col 2</td>
-            <td>Row 3 Col 2</td>
+            <td>Row 2 Col 3</td>
           </tr>
           <tr>
             <td>Row 3 Col 2</td>
@@ -60,3 +60,12 @@
     </footer>
   </body>
 </html>
+<!--
+HTML5 semantic tags help to give your page more calrity and organization. They also help with accessability for those who need it. Currently I find the <header>, <main> and <footer> the most useful.
+
+The browser will disply items in the order they are placed in the html document.
+
+I learned how to create snippets in Sublime even though I use as Atom as my text editor. I am going to research how to create snippets in Atom as I think they are quite useful.
+
+Best practices for when and how to utilize the semantic tags was most challenging. To improve my understanding I will do some research and look through the MDN reference. I will also try to find websites that are utilizing these and check out their code.
+-->
