--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="octopus.css" type="text/css">
   </head>
   <body>
-        <img id="octopus" src="octopus.png" alt="picture of an octopus">
-        <img id="hat" src="hat.png" alt="a cowboy hat">
-        <img id="glasses" src="glasses.png" alt="heart shaped glasses">
+      <div class="wrapper">
+          <div id="octo-wrapper">
+            <img id="octopus" src="octopus.png" alt="picture of an octopus">
+          </div>
+          <div id="hat">
+            <img src="hat.png" alt="a cowboy hat">
+          </div>
+          <div id="glasses">
+            <img src="glasses.png" alt="heart shaped glasses">
+          </div>
+      </div>
   </body>
 </html>
