Add css for alternative method of positioning

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -8,13 +8,15 @@
   </head>
   <body>
       <div class="wrapper">
-          <img id="octopus" src="octopus.png" alt="picture of an octopus">
-          <div id="hat">
-            <img src="hat.png" alt="a cowboy hat">
-          </div>
-          <div id="glasses">
-            <img src="glasses.png" alt="heart shaped glasses">
-          </div>
+        <div id="octopus">
+          <img src="octopus.png" alt="picture of an octopus">
+        </div>
+        <div id="hat">
+          <img src="hat.png" alt="a cowboy hat">
+        </div>
+        <div id="glasses">
+          <img src="glasses.png" alt="heart shaped glasses">
+        </div>
       </div>
   </body>
 </html>
