Add reflection comment to html

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -2,7 +2,12 @@
 Write your names here:
 1. Andrew Peterson
 2. Eitan Greene
-We spent [#] hours on this challenge.
+We spent [1] hours on this challenge during guided pairing Monday night. We had some difficulty and will try to meet up again Tuesday.
+-->
+
+<!--
+REFLECTION:
+I feel more confident with positioning now. Laura was able to walk me through relative, absolute and fixed positioning which helped a lot. As for the competencies in this GPS I feel comfortable with them, but can always learn more. I was able to grasp what we did rather quickly.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
